Version 1.1.1

   - Changed newSimplex() on representation to use faces rather than dimension
   - Added an Isomorphiosm class to simplify some mappings
   - Added GraphRepresentation for more efficient low-order complexes
   - Added a method for extracting the coboundary matrix of a complex
   - Added simplicial functions with various representations

Version 1.0.1 (16Sep2022)

   - Fixed coding style to conform (largely) to Python Black
   - Separated main interface from representation
   - Added abstract base class for new representations
   - Adde generalised degree calculation

Version 0.7.2 (11Mar2022)

   - Fixed broken setup.py

Version 0.7.1 (11Mar2022)

   - Integrated barycentric decomposition contribution
   - Added Python10 compatability and testing. Removed Python2.7 compatability
   - Fixed issue with deleting 0-simplices corrupting the basis matrices
   - Improved integrity checks in tests
   - Refined exceptions raised

Version 0.6.2 (15Mar2020)

   - Fixed package problem (simplicial.file not being included)

Version 0.6.1 (15Mar2020)

   - Added a paper for the Journal of Open Source Software for the library
   - Added various extra references to the bibliography
   - Simplified some of the operations
   - Improved copying to work with sub-classing
   - Added filtrations
   - Added generator functions for common structures, refactoring a little
     out of the SimplicialComplex class
   - Added numpy types on boundary matrices to reduce memory footprint

Version 0.5.1 (19Sep2019)

   - Refactored internally to use boundary matrices
   - Improved exception handling in a few places
   - Changed TriangularLatticeEmbedding to embed any complex as
     a lattice, relying on simplex order rather than names
   - Python 2.7 and 3.7 compatibility, with tox tests
   - Improved test coverage
   - Moved to non-versioned requirements
   - Added a tutorial to the documentation

Version 0.4.3 (24Dec2017)

   - Maintenance release to move API documentation to